<resources>
    <string name="app_name">Final_Project</string>
    <string name="version">Version Number 1</string>
    <string name="enter_city">Enter City</string>
    <string name="search">Search</string>
    <string name="search_city">Search City</string>
    <string name="saved_event">Saved Events</string>
    <string name="delete_alert">Delete</string>
    <string name="dlete_data">You want to Delete it ?</string>
    <string name="yes">Yes</string>
    <string name="Data_Deleted">Deleted</string>
    <string name="data_not_delete">Not Deleted</string>
    <string name="no">No</string>
    <string name="language">Language</string>
    <string name="instructions">Instructions</string>
    <string name="british_english">British English</string>
    <string name="choose_language">Choose Language</string>
    <string name="american_english">American English</string>
    <string name="ticket_instruction">1. Start by searching for city on Ticket Screen by entering your search text.\n2. Once you click on the search button, a list of items matching your search will be displayed.\n3. Click on any item in the list to view its details.\n4. Click on save button in the list to save your particular event.\n5. Saved event ticket  can be accessed by clicking on the \'Saved Events\' button on the search screen, where you can also delete saved items.</string>
    <string name="algon">AlgonQuin</string>

    <string name="jashan_deep">Soccer Jashandeep Kaur 4</string>
    <string name="date_match">Date of Match:</string>
    <string name="Team_1">Team 1</string>
    <string name="Team_2">Team 2</string>
    <string name="highlight">Highlight</string>
    <string name="team_name">Team Name:</string>
    <string name="team_url">Team URL</string>

    <string name="save_match">Save Match</string>
    <string name="saved_match">Saved Matches</string>
    <string name="video_link">Saved Video Link</string>
    <string name="match_instruction">1.Click on a match list item to view its details.\nOn the match details screen, there are options:\n2.Click on Highlights to redirect to the match\'s webpage.\n3.Click on Video Link to redirect to the match\'s video.\n4.To save the match, click on Save Match.\n5.On the match list screen, you can view your saved matches.</string>
    <string name="ticket_master">Ticket Master</string>
    <string name="movie_info">Movie Information</string>
    <string name="pexel">Pexel</string>
    <string name="soccer_match_highlight">Soccer Match</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="saved_image">Saved Images</string>
    <string name="saveimg">Save Image</string>
    <string name="title">Title:</string>
    <string name="year">Year:</string>
    <string name="actor">Actor:</string>
    <string name="run_time">RunTime:</string>
    <string name="plot">Plot:</string>
    <string name="rating_list">Rating List</string>
    <string name="delete_message">Delete the Image and data</string>
    <string name="item_deleted_message">Data Deleted</string>
    <string name="movie_instruction">1. Start by searching for movie on Film Screen by entering your search text.\n2. Once you click on the search button, a list of items matching your search will be displayed.\n3. Click on any item in the list to view its details.\n4. From the details page, you have the option to save the image.\n5. Saved images can be accessed by clicking on the \'Saved Images\' button on the search screen, where you can also delete saved items.</string>
    <string name="failed_delete">Not Deleted</string>

    <string name="manisha">Ticket Manisha 1</string>
    <string name="komal">Movie Komal 2</string>
    <string name="harman">Pexel Harman 3</string>

</resources>